Change SdkBindingData to be typed and add typed transform outputs #minor (#164)
Add SdkBindingData<T> and SdkTransform<T> 

and related changes, also JacksonSdkType and SdkScalaType supports
SdkBindingData<T> in attributes 


Signed-off-by: Nelson Arapé <nelson@spotify.com>
Signed-off-by: Rafael Raposo <rafaelraposo@spotify.com>
Signed-off-by: Lucía Pasarin <luciap@spotify.com>
Signed-off-by: Pablo Casares Crespo <pabloc@spotify.com>
Signed-off-by: Andrés Gómez <andresg@spotify.com>
Signed-off-by: Sonja Ericsson <sonjae@spotify.com>
Signed-off-by: Joakim Bergman <jocke@spotify.com>
Co-authored-by: Nelson Arapé <nelson@spotify.com>
Co-authored-by: Andrés Gómez <andresg@spotify.com>
Co-authored-by: Lucía Pasarin <luciap@spotify.com>
Co-authored-by: Pablo Casares Crespo <pabloc@spotify.com>
Co-authored-by: Rafael Raposo <rafaelraposo@spotify.com>
Co-authored-by: Sonja Ericsson <sonjae@spotify.com>
Co-authored-by: Joakim Bergman <jocke@spotify.com>